<resources>
    <string name="app_name">E_WeJob</string>
    <string name="company_name">Company Name </string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="experience_years">Experience Years</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="bacloria">bacloria</string>
    <string name="certificate_type">Certificate Type</string>
    <string name="job_title">Job Title</string>
    <string name="salary">Salary :</string>
    <string name="salary1">Salary </string>

    <string name="required_experience_years">Required Experience Years :</string>
    <string name="required_experience_years1">Required Experience Years </string>

    <string name="add_job">Add Job</string>
    <string name="name">Name</string>
    <string name="e_mailadress">Email Address</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="required">Required</string>
    <string name="pass_not_match">Password Not Matching</string>
    <string name="university">University</string>
    <string name="master">Master</string>
    <string name="phd">PhD</string>
    <string name="err_email">Please Enter Correct Email</string>
    <string name="err_phone">Please Enter Correct Phone</string>
    <string name="required_education_level">Required Education Level :</string>
    <string name="err_pass">Please Enter 8 Characters at Least</string>
    <string name="company_telephone">Company Telephone</string>
    <string name="company_password">Company Password</string>
    <string name="add_company">Add Company</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="bachelor">Bachelor</string>
    <string name="diploma">Diploma</string>
    <string name="create_account">Create Account</string>
    <string name="show_candidates">Show Candidates</string>
    <string name="show_all_jobs">Show All Jobs</string>
    <string name="order_jobs_by_experience_years">Order Jobs by Experience Years</string>
    <string name="order_jobs_by_education_level">Order Jobs By Education Level</string>
    <string name="phone">Phone</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="show_company_jobs">Show Company Jobs</string>
    <string name="email_address">Email Address</string>
    <string name="company_name1">Company Name1</string>
    <string name="suitable_jobs">Show Suitable Jobs</string>
    <string-array name="TypeOfRegisteration">
        <item>Type Of Register</item>
        <item>Company</item>
        <item>Candidate</item>
    </string-array>
    <string-array name="degree">
        <item>Required Education Level</item>
        <item>Bachelor</item>
        <item>Diploma</item>
        <item>Master</item>
        <item>PhD</item>
    </string-array>
</resources>