<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CandidateMainActivity">

    <include
        layout="@layout/logout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/showAllJobs"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="ShowAllJobs"
        android:text="@string/show_all_jobs"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showJobsbyYears"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="showJobsbyYears"
        android:text="@string/order_jobs_by_experience_years"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showJobsbyEducationLevel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="showJobsbyEducationLevel"
        android:text="@string/order_jobs_by_education_level"
        android:textAllCaps="false" />


</androidx.appcompat.widget.LinearLayoutCompat>